--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -61,16 +61,18 @@
                         <span class="nav__name">Inicio</span>
                     </a>
 
-                    <div class="nav__dropdown">
-                        <a href="/usuario/perfil" class="nav__link">
-                            <i class='bx bx-user nav__icon'></i>
-                            <span class="nav__name">Perfil</span>
+                    <a href="/usuario/perfil" class="nav__link">
+                        <i class='bx bx-user nav__icon'></i>
+                        <span class="nav__name">Perfil</span>
                            
-                        </a>
+                    </a>
 
+                    
 
-                    </div>
-
+                    <a href="/informacao/sobreNos" class="nav__link">
+                        <i class='bx bx-compass nav__icon'></i>
+                        <span class="nav__name">Sobre nós</span>
+                    </a>
 
                 </div>
 
@@ -115,6 +117,7 @@
                               
                                       
                                     <a href="/professor/questoes" class="nav__dropdown-item"><i class='bx bxs-paint' ></i>Minhas questões</a>
+                                    <!-- <a href="/professor/verificar-similaridade" class="nav__dropdown-item"><i class='bx bxs-paint' ></i>Verificação IA</a> -->
                                     <a href="/professor/manutencao" class="nav__dropdown-item"><i class='bx bxs-paint' ></i>Verificação IA</a>
                            
 
