--- a/public/css/bioTimeDesenvolvedor.css
+++ b/public/css/bioTimeDesenvolvedor.css
@@ -45,6 +45,7 @@
   .card__image-container {
     display: flex;
     width: 30%;
+    height: 100%;
     flex-shrink: 0;
   }
   
@@ -52,7 +53,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    aspect-ratio: 1;
+    aspect-ratio: 0;
   }
   
   .card__content {
