--- a/views/partials/timeDesenvolvimento.ejs
+++ b/views/partials/timeDesenvolvimento.ejs
@@ -42,14 +42,15 @@
     <div class="card" data-index="0">
       <div class="card__inner">
         <div class="card__image-container">
-          <img class="card__image" src="/img/desenvolvedores/Rafael.png" alt=""/>
+          <img class="card__image" src="/img/desenvolvedores/Guilherme_O_Souza.png" alt=""/>
         </div>
         <div class="card__content">
-          <h1 class="card__title">Rafael</h1>
-          <span>Desenvolvedor Full Stack</span>
+          <h1 class="card__title">Guilherme O. Souza</h1>
+          <span class="card__function">Implementação da curadoria semiautomatica e manuteção da plataforma</span>
 
           <p class="card__description">
-            Formado no IFSP Jacareí e atualmente trabalho como desenvolvedor Full Stack utilizando React, Flutter e C#. Meu primeiro grande projeto foi a primeira versão do IFVest, um projeto muito desafiador, mas também muito divertido. Nas minhas horas livres, gosto de programar e estudar novos idiomas.
+            Sou técnico em Desenvolvimento de Sistemas e estou prestes a concluir minha graduação em Análise e Desenvolvimento de Sistemas pelo IFSP Jacareí. Tenho experiência com uma variedade de linguagens de programação, incluindo PHP, JavaScript (HTML e CSS), Java, C#, Python, C++ e Dart. Além disso, possuo um conhecimento considerável em manutenção de hardware e software. Na plataforma IFVEST, atuei na manutenção da plataforma e no desenvolvimento de uma curadoria semiautomática utilizando a API da inteligência artificial da Google, o Gemini.
+
           </p>
         </div>
       </div>
@@ -58,14 +59,62 @@
     <div class="card" data-index="0">
       <div class="card__inner">
         <div class="card__image-container">
-          <img class="card__image" src="/img/desenvolvedores/Rafael.png" alt=""/>
+          <img class="card__image" src="/img/desenvolvedores/perfil.png" alt=""/>
         </div>
         <div class="card__content">
-          <h1 class="card__title">Rafael</h1>
-          <span>Desenvolvedor Full Stack</span>
+          <h1 class="card__title">Ruan Patrick</h1>
+          <span class="card__function">Implementação do editor de equações, manuteção da plataforma e hospedagem da plataforma</span>
 
           <p class="card__description">
-            Formado no IFSP Jacareí e atualmente trabalho como desenvolvedor Full Stack utilizando React, Flutter e C#. Meu primeiro grande projeto foi a primeira versão do IFVest, um projeto muito desafiador, mas também muito divertido. Nas minhas horas livres, gosto de programar e estudar novos idiomas.
+            Texto
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card" data-index="0">
+      <div class="card__inner">
+        <div class="card__image-container">
+          <img class="card__image" src="/img/desenvolvedores/perfil.png" alt=""/>
+        </div>
+        <div class="card__content">
+          <h1 class="card__title">Cristhian ...</h1>
+          <span class="card__function">Desenvolvedor da plataforma</span>
+
+          <p class="card__description">
+            Texto
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card" data-index="0">
+      <div class="card__inner">
+        <div class="card__image-container">
+          <img class="card__image" src="/img/desenvolvedores/perfil.png" alt=""/>
+        </div>
+        <div class="card__content">
+          <h1 class="card__title">Rafaela ...</h1>
+          <span class="card__function">Teste de software</span>
+
+          <p class="card__description">
+            Texto
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card" data-index="0">
+      <div class="card__inner">
+        <div class="card__image-container">
+          <img class="card__image" src="/img/desenvolvedores/perfil.png" alt=""/>
+        </div>
+        <div class="card__content">
+          <h1 class="card__title">Sóstenes ...</h1>
+          <span class="card__function">???</span>
+
+          <p class="card__description">
+            Texto
           </p>
         </div>
       </div>
