--- a/views/usuario/inicio-logado.ejs
+++ b/views/usuario/inicio-logado.ejs
@@ -37,7 +37,7 @@
         <div class="ag-courses-item_bg"></div>
 
         <div class="ag-courses-item_title">
-          Favoritos
+          Meus Simulados
         </div>
       </a>
     </div>
