--- a/views/prova/gabarito.ejs
+++ b/views/prova/gabarito.ejs
@@ -55,7 +55,10 @@
                                 <%= questao.titulo %>
                             </p>
                         </div>
-                        <div class="name"><%- questao.pergunta %><span class="required">*</span></div>
+                        <div class="name" data-delta='<%= questao.pergunta %>'>
+                            <!-- O conteúdo será inserido via JavaScript -->
+                            <span class="required">*</span>
+                        </div>
                         <% const respostaUsuario=respostasUsuario.find(r=> r.questaoId === questao.id); %>
                         <% questao.Opcoes.forEach(opcao=> { %>
                             
@@ -77,6 +80,66 @@
                     <% }) %>
         </main>
         <!-- Adicione aqui os scripts JS necessários -->
+         <script> 
+                        document.addEventListener('DOMContentLoaded', function () {
+                // Selecione todos os elementos que possuem o atributo data-delta
+                const deltaElements = document.querySelectorAll('[data-delta]');
+
+                deltaElements.forEach(function (element) {
+                    const delta = JSON.parse(element.getAttribute('data-delta'));
+
+                    // Crie uma instância temporária do Quill para renderizar o delta
+                    const tempDiv = document.createElement('div');
+                    const tempQuill = new Quill(tempDiv, { modules: { toolbar: false } });
+                    const Parchment = Quill.imports.parchment;
+                    const Delta = Quill.imports.delta;
+
+                    // Extend the embed
+                    class Mathjax extends Parchment.Embed {
+
+                        // Create node
+                        static create(value) {
+                            const node = super.create(value);
+                            if (typeof value === 'string') {
+                                node.innerHTML = "&#65279;" + this.tex2svg(value) + "&#65279;";
+                                node.contentEditable = 'false';
+                                node.setAttribute('data-value', value);
+                            }
+                            return node;
+                        }
+
+
+                        static value(domNode) {
+                            return domNode.getAttribute('data-value');
+                        }
+
+
+                        static tex2svg(latex) {
+                            let MathJaxNode = document.createElement("DIV");
+                            MathJaxNode.style.visibility = "hidden";
+                            MathJaxNode.innerHTML = latex;
+                            document.body.appendChild(MathJaxNode);
+                            MathJax.typeset();
+                            let svg = MathJaxNode.innerHTML;
+                            document.body.removeChild(MathJaxNode);
+                            return svg;
+                        }
+
+                    }
+
+                    Mathjax.blotName = 'mathjax';
+                    Mathjax.className = 'ql-mathjax';
+                    Mathjax.tagName = 'SPAN';
+
+
+                    Quill.register(Mathjax);
+                    tempQuill.setContents(delta);
+
+                    // Insira o HTML gerado no elemento atual
+                    element.innerHTML = tempDiv.innerHTML;
+                });
+            });
+         </script>
         <script src="/js/main.js"></script>
         <script src="/js/prova.js"></script>
 </body>
