--- a/views/prova/prova.ejs
+++ b/views/prova/prova.ejs
@@ -1,89 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Prova</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Adicione aqui os links para os estilos CSS necessários -->
-    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" async> </script>
+    <script type="text/javascript" id="MathJax-script" defer
+        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+        </script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/googlef2.css">
     <link rel="stylesheet" href="/css/textarea.css">
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
     <style>
-        .opcao{
+        .opcao {
             display: flex;
             place-content: start;
             margin-left: 2rem;
         }
+
         .letra {
-    margin-right: 10px; /* Ajuste o valor conforme necessário */
-}
+            margin-right: 10px;
+        }
 
-.radio-input {
-    margin-right: 10px; /* Ajuste o valor conforme necessário */
-}
-
-
+        .radio-input {
+            margin-right: 10px;
+        }
     </style>
-    <
 </head>
+
 <body>
     <%- include('../partials/sidebar') %>
-    <main>
+        <main>
+            <form id="questionario" class="form" action="/usuario/simulados/responder-prova/<%= simulado.id %>"
+                method="POST">
+                <div class="title-div">
+                    <h1>Teste de questões <%= simulado.tipo %>
+                    </h1>
+                </div>
 
-
-        <form id="questionario" class="form" action="/usuario/simulados/responder-prova/<%= simulado.id %>" method="POST">
-            <div class="title-div">
-                <h1>Teste de questões <%= simulado.tipo %></h1>
-            </div>
-            <% simulado.Questões.forEach(questao => { %>
-
+                <% simulado.Questões.forEach(questao=> { %>
                     <div class="name-div">
                         <div class="titulo">
-                            <p><%= questao.titulo %>
-                            <% if (questao.vestibular && questao.vestibular.nome && questao.vestibular.ano) { %>
-                                (<%= questao.vestibular.nome %> <%= questao.vestibular.ano %>)
-                            <% } %>
+                            <p>
+                                <%= questao.titulo %>
+                                    <% if (questao.vestibular && questao.vestibular.nome && questao.vestibular.ano) { %>
+                                        (<%= questao.vestibular.nome %>
+                                            <%= questao.vestibular.ano %>)
+                                                <% } %>
                             </p>
                         </div>
-                        <div class="name"><%- questao.pergunta %><span class="required">*</span></div>
-                       
-                            <% if (questao.tipo === "OBJETIVA") { %>
-                                <% const letras = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']; %>
-                                <% questao.Opcoes.forEach((opcao, index) => { %>
+
+                        <div class="name" data-delta='<%= questao.pergunta %>'>
+                            <!-- O conteúdo será inserido via JavaScript -->
+                            <span class="required">*</span>
+                        </div>
+                        <% if (questao.tipo==="OBJETIVA" ) { %>
+                            <% const letras=['a', 'b' , 'c' , 'd' , 'e' , 'f' , 'g' , 'h' , 'i' , 'j' ]; %>
+                                <% questao.Opcoes.forEach((opcao, index)=> { %>
                                     <div class="opcao">
-                                        <label  class="letra" for="opcao<%= opcao.id %>"><%= letras[index] %>)</label>
-                                        <input class="radio-input" type="radio" id="opcao<%= opcao.id %>" name="questoes[<%= questao.id %>]" value="<%= questao.id %>-<%= opcao.id %>">
+                                        <label class="letra" for="opcao<%= opcao.id %>">
+                                            <%= letras[index] %>)
+                                        </label>
+                                        <input class="radio-input" type="radio" id="opcao<%= opcao.id %>"
+                                            name="questoes[<%= questao.id %>]"
+                                            value="<%= questao.id %>-<%= opcao.id %>">
                                         <% if (opcao.descricao.includes('/uploads')) { %>
-                                            <!-- Se a descrição contiver uma tag de imagem, renderiza como HTML -->
-                                            <img src="<%= opcao.descricao %>" alt="Descrição da opção <%= index + 1 %>" width="150" height="200">
-                                        <% } else { %>
-                                            <!-- Se a descrição for texto, renderiza como texto -->
-                                            <label class="opcao-texto" for="opcao<%= opcao.id %>"><%= opcao.descricao %></label>
-                                        <% } %>
+                                            <img src="<%= opcao.descricao %>" alt="Descrição da opção <%= index + 1 %>"
+                                                width="150" height="200">
+                                            <% } else { %>
+                                                <label class="opcao-texto" for="opcao<%= opcao.id %>">
+                                                    <%= opcao.descricao %>
+                                                </label>
+                                                <% } %>
                                     </div>
-                                <% }) %>
-                    <% } else if (questao.tipo === "DISSERTATIVA") { %>
-                      
-                            <textarea name="respostas[questao_<%= questao.id %>]" placeholder="Sua resposta">
+                                    <% }) %>
+                                        <% } else if (questao.tipo==="DISSERTATIVA" ) { %>
+                                            <textarea name="respostas[questao_<%= questao.id %>]"
+                                                placeholder="Sua resposta"></textarea>
+                                            <% } %>
+                    </div>
+                    <% }) %>
 
-                            </textarea>
-                       
+                        <div class="espaco">
+                            <button class="btn" type="submit">Enviar</button>
+                        </div>
+            </form>
+        </main>
 
-                    <% } %>
-                     </div>
-               
-            <% }) %>
-            <div class="espaco">
-                <button class="btn" type="submit">Enviar</button>
-            </div>
-        </form>
-    </main>
-
-    <!-- Adicione aqui os scripts JS necessários -->
-    <script src="/js/main.js"></script>
-    <script src="/js/prova.js"></script>
-    <script></script>
+        <!-- Adicione aqui os scripts JS necessários -->
+        <script src="/js/main.js"></script>
+        <script src="/js/quillContentHTML.js"></script>
 </body>
+
 </html>
