--- a/views/simulado/associar-pergunta-simulado.ejs
+++ b/views/simulado/associar-pergunta-simulado.ejs
@@ -7,7 +7,8 @@
 
     <!--========== BOX ICONS ==========-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="/css/styles.css">
 
@@ -237,7 +238,7 @@
 
             <h1>Associar questoes</h1>
             <div>
-                
+
                 <form action="/usuario/simulados/<%= simulado.id %>/adicionar-questoes" method="GET">
                     <!-- Campo de filtragem por título -->
                     <input type="text" name="titulo" placeholder="Filtrar por título">
@@ -293,9 +294,9 @@
                             <tr>
                                 <th></th>
                                 <th>Título</th>
-                                <th>Questão</th>
+                         
                                 <th>Tipo</th>
-                            
+
                                 <th>Tópico</th>
                             </tr>
                         </thead>
@@ -310,13 +311,11 @@
                                     <td>
                                         <%= questao.titulo %>
                                     </td>
-                                    <td>
-                                        <%= questao.pergunta %>
-                                    </td>
+                    
                                     <td>
                                         <%= questao.tipo %>
                                     </td>
-                              
+
                                     <td>
                                         <% questao.Topicos.forEach(topico=> { %>
                                             <%= topico.materia %>
@@ -427,12 +426,10 @@
 
 
         </script>
-        <script>
-            console.log("Areas:", Areas);
-            console.log("questoesPorArea:", questoesPorArea);
-        </script>
+
         <!--========== MAIN JS ==========-->
         <script src="/js/main.js"></script>
+
 </body>
 
 </html>
